[package]
name = "rnes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sdl2 = "0.35.2"
rand = "0.8.5"
bitbash = "0.5.1"
# rubato = {version = "0.12.0", features = ["log"]}
rubato = "0.12.0"
log = "0.4.17"
env_logger = "0.9.0"
biquad = "0.4.2"
eyre = "0.6.8"
gl = "0.14.0"
egui_sdl2_gl = "0.16.0"